--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #ffae00;
+  background-color: #ffa347;
   display: flex;
   align-items: center;
   position: sticky;
