--- a/src/components/Auction/AuctionListStyle.css
+++ b/src/components/Auction/AuctionListStyle.css
@@ -6,7 +6,13 @@
 
 .container {
   justify-content: center;
-  background-color: #f5f6f4;
+  background: rgb(135, 134, 133);
+  background: linear-gradient(
+    343deg,
+    rgba(135, 134, 133, 1) 0%,
+    rgba(206, 108, 71, 0.5270483193277311) 45%,
+    rgba(137, 147, 124, 1) 89%
+  );
   margin-top: 30px;
   margin-bottom: 30px;
   padding: 5px;
@@ -29,7 +35,8 @@
   height: 280px;
 
   padding: 30px;
-  background-color: #b5aa9d;
+  background-color: RGBA(255, 255, 255, 0.4);
+  backdrop-filter: blur(5px);
   border-radius: 7px 7px 3px 3px;
 
   -webkit-box-shadow: -1px 7px 21px -16px rgba(0, 0, 0, 0.75);
