--- a/src/components/Auction/AuctionListStyle.css
+++ b/src/components/Auction/AuctionListStyle.css
@@ -53,6 +53,6 @@
   -webkit-box-shadow: -1px 7px 21px -8px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 7px 21px -8px rgba(0, 0, 0, 0.75);
   box-shadow: -1px 7px 21px -8px rgba(0, 0, 0, 0.75);
-
+  background-color: RGBA(255, 255, 255, 0.6);
   transition: 800ms;
 }
