--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,37 +2,57 @@
   /* background-color: #ce6c47; */
   background-color: RGBA(69, 69, 69, 0.8);
   backdrop-filter: blur(5px);
-  box-shadow: 1px 7px 10px -15px #262625;
+  -webkit-box-shadow: -1px 9px 12px -10px rgba(0, 0, 0, 0.68);
+  -moz-box-shadow: -1px 9px 12px -10px rgba(0, 0, 0, 0.68);
+  box-shadow: -1px 9px 12px -10px rgba(0, 0, 0, 0.68);
+  background-attachment: local;
   display: flex;
   align-items: center;
   position: sticky;
   top: 0;
   z-index: 100;
+  height: 80px;
 }
+
 .header_logo {
-  width: 100px;
+  height: 80px;
   margin: 0 20px;
+  position: absolute;
+  left: 400px;
+  top: 1px;
 }
 .header_search {
   display: flex;
   margin-left: 20px;
   height: 35px;
-
   flex: 1;
 }
+
 .header_searchInput {
   padding: 20px;
   border: none;
-  width: 70%;
+  width: 300px;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 5px 5px 6px -3px rgba(0, 0, 0, 0.64);
+  box-shadow: inset 5px 5px 6px -3px rgba(0, 0, 0, 0.64);
+
+  background: #cccbc9;
 }
-.header_searchIcon {
+.headerSearchIcon {
   color: orange;
   padding: 5px;
-  height: 22px !important;
+  height: 40px;
 }
 .header_link {
-  color: white;
+  color: #c3c8bc;
   text-decoration: none;
+  transition: 600ms;
+}
+
+.header_link:hover {
+  color: #dee4d7;
+  text-decoration: none;
+  transition: 200ms;
 }
 .header_option {
   display: flex;
