--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -31,15 +31,17 @@
 .header_searchInput {
   padding: 20px;
   border: none;
-  width: 300px;
-  border-radius: 10px;
+  width: 40px;
+  border-radius: 50px;
   -webkit-box-shadow: inset 5px 5px 6px -3px rgba(0, 0, 0, 0.64);
   box-shadow: inset 5px 5px 6px -3px rgba(0, 0, 0, 0.64);
   background: #cccbc9;
+  transition: all 500ms;
 }
 
 .header_searchInput:focus {
   outline: none;
+  width: 300px;
 }
 
 .headerSearchIcon {
