--- a/src/components/Auction/AuctionListStyle.css
+++ b/src/components/Auction/AuctionListStyle.css
@@ -1,4 +1,4 @@
-/* Malin */
+/* Malin
 * {
   margin: 0;
   padding: 0;
@@ -31,22 +31,18 @@
 }
 
 .a-comp-card {
-  width: 300px;
-  height: 280px;
-
-  padding: 30px;
-  background-color: RGBA(255, 255, 255, 0.4);
-  backdrop-filter: blur(5px);
-  border-radius: 7px 7px 3px 3px;
-
-  -webkit-box-shadow: -1px 7px 21px -16px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 7px 21px -16px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -1px 7px 21px -16px rgba(0, 0, 0, 0.75);
+  backdrop-filter: blur(5px);
+  background-color: RGBA(255, 255, 255, 0.4);
+  border-radius: 7px 7px 3px 3px;
   box-shadow: -1px 7px 21px -16px rgba(0, 0, 0, 0.75);
-
-  transition: 1s;
-  transition-delay: 0.3s;
-
   font-size: 1.5rem;
+  height: 280px;
+  padding: 30px;
+  transition-delay: 0.3s;
+  transition: 1s;
+  width: 300px;
 }
 
 .a-comp-card:hover {
@@ -55,4 +51,4 @@
   box-shadow: -1px 7px 21px -8px rgba(0, 0, 0, 0.75);
   background-color: RGBA(255, 255, 255, 0.6);
   transition: 800ms;
-}
+} */
