--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -117,15 +117,15 @@ body {
   color: lightgrey;
   padding: 20px;
   transition: all 500ms;
-  width: 40px;
+  width: 300px;
   font-size: 20px;
 }
 
-.header_searchInput:focus,
+/* .header_searchInput:focus,
 .header_searchInput:hover {
   outline: none;
   width: 300px;
-}
+} */
 
 .headerSearchIcon {
   height: 40px;
